--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -14,7 +14,7 @@ on:
     types: [started]
     
 env:
-  ROM_URL: http://bigota.d.miui.com/V11.0.2.0.OAGCNXM/miui_MI5S_V11.0.2.0.OAGCNXM_6ce204eb2c_8.0.zip
+  ROM_URL: https://bigota.d.miui.com/9.8.29/miui_MI5S_9.8.29_ef993ddd7f_8.0.zip
   ROM_NAME: MIUI
   TZ: Asia/Shanghai
 
