--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -14,7 +14,7 @@ on:
     types: [started]
     
 env:
-  ROM_URL: http://bigota.d.miui.com/7.11.16/miui_HMNoteLTE_7.11.16_3ee55b0894_4.4.zip
+  ROM_URL: http://bigota.d.miui.com/7.11.16/miui_HM2XTD_7.11.16_af26316d84_4.4.zip
   ROM_NAME: MIUI
   TZ: Asia/Shanghai
 
