--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -13,8 +13,8 @@ on:
   watch:
     types: [started]
     
-env:
-  ROM_URL: https://175-6-161-1.ksyungslb.com/bigota.d.miui.com/V12.0.5.0.QCDCNXM/miui_DANDELION_V12.0.5.0.QCDCNXM_e3518ac091_10.0.zip?ksy_gslb_referer=https%3A%2F%2Fmiuiver.com%2F
+env: https://bigota.d.miui.com/V11.0.14.0.QDLMIXM/miui_DAISYGlobal_V11.0.14.0.QDLMIXM_7c2e1a2bc7_10.0.zip
+  ROM_URL: 
   ROM_NAME: MIUI
   TZ: Asia/Shanghai
 
