--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -14,7 +14,7 @@ on:
     types: [started]
     
 env:
-  ROM_URL: https://bigota.d.miui.com/V11.0.14.0.QDLMIXM/miui_DAISYGlobal_V11.0.14.0.QDLMIXM_7c2e1a2bc7_10.0.zip
+  ROM_URL: https://bigota.d.miui.com/V12.0.6.0.QJCCNXM/miui_LANCELOT_V12.0.6.0.QJCCNXM_33a88e092b_10.0.zip
   ROM_NAME: MIUI
   TZ: Asia/Shanghai
 
@@ -51,7 +51,7 @@ jobs:
               sudo bash setup.sh
        
        - name: Download Stock Rom & Generate GSI
-         run: sudo ./ErfanGSIs/url2GSI.sh $ROM_URL $ROM_NAME
+         run: sudo ./ErfanGSIs/url2GSI.sh $ROM_URL $ROM_NAME -a
        
        - name: Zip GSI  
          run: |
@@ -61,7 +61,7 @@ jobs:
        - name: Upload GSI to BitSend
          run: |
               curl -sL https://git.io/file-transfer | sh
-              ./transfer arp final/GSI.zip
+              ./transfer wet final/GSI.zip
 
          
             
