--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -14,7 +14,7 @@ on:
     types: [started]
     
 env:
-  ROM_URL: https://bigota.d.miui.com/V12.5.1.0.RFBCNXM/miui_GRUS_V12.5.1.0.RFBCNXM_0aa6dd99a1_11.0.zip
+  ROM_URL: https://bigota.d.miui.com/V12.0.2.0.QCPCNXM/miui_OLIVELITE_V12.0.2.0.QCPCNXM_19bb3e7581_10.0.zip
   ROM_NAME: MIUI
   TZ: Asia/Shanghai
 
