--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -14,7 +14,7 @@ on:
     types: [started]
     
 env:
-  ROM_URL: http://bigota.d.miui.com/V11.0.6.0.PDCCNXM/miui_MI6X_V11.0.6.0.PDCCNXM_f049df201b_9.0.zip
+  ROM_URL: https://bigota.d.miui.com/V10.3.4.0.PEDCNXM/miui_MIMAX3_V10.3.4.0.PEDCNXM_ff71181061_9.0.zip
   ROM_NAME: MIUI
   TZ: Asia/Shanghai
 
