--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -14,7 +14,7 @@ on:
     types: [started]
     
 env:
-  ROM_URL: https://bigota.d.miui.com/V12.0.2.0.QEDCNXM/miui_MIMAX3_V12.0.2.0.QEDCNXM_ab58854489_10.0.zip
+  ROM_URL: https://bigota.d.miui.com/V12.0.1.0.QEDMIXM/miui_MIMAX3Global_V12.0.1.0.QEDMIXM_83ae0d72cd_10.0.zip
   ROM_NAME: MIUI
   TZ: Asia/Shanghai
 
